<resources>
    <string name="app_name">LocationFinder</string>
    <string name="add">Add</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="input_1">Enter Latitude</string>
    <string name="input_2">Enter Longitude</string>
    <string name="save_location">Save Location</string>
    <string name="generate_address">Generate Address</string>
    <string name="address">Address</string>
    <string name="address_display">Address</string>
    <string name="latitude_display">Latitude</string>
    <string name="longitude_disaply">Longitude</string>
    <string name="search_address">Search Address</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>


</resources>