<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_Location">


    <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="76dp"
        android:text="@string/longitude"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/latitude"
        app:layout_constraintTop_toBottomOf="@+id/latitude" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="96dp"
        android:text="@string/latitude"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_2"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/input_2"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"

        app:layout_constraintBottom_toBottomOf="@+id/longitude"
        app:layout_constraintEnd_toEndOf="@+id/input_1" />

    <EditText
        android:id="@+id/input_1"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="@string/input_2"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"

        app:layout_constraintBottom_toBottomOf="@+id/latitude"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/Save"
        android:layout_width="203dp"
        android:layout_height="55dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="128dp"
        android:text="@string/save_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/GenrateAddress"
        android:layout_width="217dp"
        android:layout_height="53dp"
        android:layout_marginTop="56dp"
        android:text="@string/generate_address"
        app:layout_constraintEnd_toEndOf="@+id/Save"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/Save"
        app:layout_constraintTop_toBottomOf="@+id/input_2" />

    <EditText
        android:id="@+id/Address_new"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/address"
        app:layout_constraintEnd_toEndOf="@+id/GenrateAddress"
        app:layout_constraintStart_toStartOf="@+id/Save"
        app:layout_constraintTop_toBottomOf="@+id/GenrateAddress" />

    <Button
        android:id="@+id/Random_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="60dp"
        android:text="random"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Save"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/random_number"
        android:layout_width="151dp"
        android:layout_height="47dp"
        android:layout_marginStart="44dp"
        app:layout_constraintBottom_toBottomOf="@+id/Random_button"
        android:hint="RandomNumber"
        app:layout_constraintStart_toEndOf="@+id/Random_button" />



</androidx.constraintlayout.widget.ConstraintLayout>