<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/backgroundCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:background="@color/AddressColor"
    android:elevation="4dp"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:id="@+id/rel_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/AddressColor">

        <TextView
            android:id="@+id/Address_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:gravity="center_vertical"
            android:text="@string/address_display"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/latitude_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Address_txt"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/latitude_display"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/longitude_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/latitude_txt"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/longitude_disaply"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>